# PublicationsService

./: .dockerignore  .env  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
.docs/: FLOW.md  publications-sevice.postman_collection.json
.docs/environments/: 01 - localhost.postman_environment.json  02 - production.postman_environment.json  03 - staging.postman_environment.json  04 - development_environment.json
.github/workflows/: on-push-tags.yml  on-push.yml
.infrastructure/database/migrations/: env.py
.infrastructure/database/migrations/versions/: 098b01f5de90_article_idempotency_key_as_unique_key.py  2861cba30439_enable_pgcrypto_extension.py  2de2ea6cae99_add_articles_table.py  3d95b4989da7_add_uploads_table.py  407209db1fc3_add_source_files_table.py  5b16e01128aa_add_articles_table.py  9982c4054295_add_publications_table.py  c5dca57d1eb2_add_publications_table.py  cb7383465655_article_idempotency_key.py  f4ed57567944_unique_source_file_id.py
.infrastructure/docker/: Dockerfile  compose.development.yaml  compose.development.yml  compose.yaml  compose.yml
.infrastructure/kubernetes/production/: kustomization.yml  secrets.yml  service.yml
.infrastructure/kubernetes/staging/: kustomization.yml  secrets.yml  service.yml
.infrastructure/monitoring/: collector.alloy  tempo.yml
.infrastructure/monitoring/grafana/: datasources.yml
.infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml
app/: enums.py  lifespan.py  main.py  models.py  router.py
app/confs/: broker.py  bucket.py  environment.py  settings.py  workers.py
app/confs/database/: connection_settings.py  session.py
app/core/: authorization.py  database.py  dependencies.py  message_broker.py  models.py  storage.py
app/core/config/: environment.py  message_broker.py  storage.py  worker.py
app/core/exceptions/: exception_handler.py
app/exceptions/: exception_handler.py
app/exceptions/errors/: http_exception.py  internal_server_error.py  not_found.py  request_validation.py  unauthorized_token.py  validation.py
app/modules/publications/: controller.py  dependencies.py  repository.py  service.py
app/modules/uploads/: controller.py  dependencies.py  repository.py  service.py
app/routers/: __init__.py  healthcheck.py  router.py
app/shared_resources/: enums.py  models.py  repositories.py
app/utils/: authorization.py  broker.py  bucket.py  repository.py  xml.py
tests/unit/app/: router.py
tests/unit/app/utils/: xml.py
tests/unit/workers/: create_publication.py
workers/: create_publication.py  process_uploaded_file.py
(+65 files in other folders)
