[project]
name = "publications-service"
version = "0.0.2"
description = "Service for ingesting and querying Brazilian official gazette publications."
authors = [
    {name = "RempelOliveira", email = "rempel.oliveira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14.2,<4"

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.dependencies]
fastapi = "^0.133.1"
uvicorn = "^0.41.0"
uvloop = "^0.22.1"
httptools = "^0.7.1"
sqlalchemy = "^2.0.47"
alembic = "^1.18.4"
prettyconf = "^2.3.0"
psycopg = {extras = ["binary"], version = "^3.3.3"}
python-multipart = "^0.0.22"
pyjwt = "^2.11.0"
inflection = "^0.5.1"
boto3 = "^1.42.59"
celery = "^5.6.2"
aio-pika = "^9.6.1"
prometheus-fastapi-instrumentator = "^7.1.0"
defusedxml = "^0.7.1"

[tool.poetry.group.development.dependencies]
isort = "^8.0.0"
ruff = "^0.15.2"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
boto3-stubs = {extras = ["s3"], version = "^1.42.59"}
faker = "^40.5.1"

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["*test"]
addopts = "--tb=native --cov-report=term-missing --cov=."
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
omit = [
    "tests/*", ".infrastructure/*", "*/__init__.py"
]
fail_under = 70

[tool.ruff]
lint.select = [
    "E",
    "F",
    "W",
    "B",
    "UP",
    "FAST",
]
indent-width = 4
line-length = 128
lint.ignore = [
    "D",
    "B004",
    "B009",
    "N802",
    "N815",
    "FA100",
    "FA102",
    "FAST002",
    "FAST003",
    "PT009",
    "PT013",
    "COM812",
    "TC001",
    "TC003",
    "PLW2901",
    "ICN001",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "PLR0913",
    "ARG002",
]
".infrastructure/database/migrations/*" = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query"
]

[tool.ruff.lint.pylint]
max-args = 3
max-returns = 4

[tool.isort]
indent = 4
line_length = 128
multi_line_output = 2
include_trailing_comma = false
force_grid_wrap = 0
ensure_newline_before_comments = true
remove_redundant_aliases = true
lines_between_types = 1
lines_after_imports = 2
length_sort = true
src_paths = ["app", "tests", "workers"]

sections = [
    "FUTURE",
    "THIRDPARTY",
    "FIRSTPARTY"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
